# SingularityEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  vcpkg.json  xmake.lua
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml
Benchmarks/: CMakeLists.txt  benchmark.cpp  maths.cpp
CMake/: CompilerChecks.cmake
Source/: CMakeLists.txt  SE.mpp  xmake.lua
Source/Common/: CMakeLists.txt  common.cppm  result.cppm
Source/Kernel/: CMakeLists.txt  cpucapabilities.cppm  enginekernel.cppm  kernel.cppm
Source/Kernel/SIMD/: CMakeLists.txt  SIMD.cppm  SSE2.cppm  SSE2proto.cppm  SSE42.cppm  SSE42proto.cppm
Source/Maths/: CMakeLists.txt  maths.cppm  misc.cppm  vector.cppm  vector2.cppm
Source/System/: CMakeLists.txt  system.cppm  system.mpp  thread.cppm  thread.mpp  threadpool.cppm  xmake.lua
Source/Utilities/: CMakeLists.txt  dynamicloader.cppm  filesystem.cppm  fileutilities.cppm  logging.cppm  logging.mpp  utilities.cppm  utilities.mpp  xmake.lua
Tests/: CMakeLists.txt  maths.cpp  system.cpp  test.cpp  utilities.cpp  xmake.lua
